--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Hashimura Chiro">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>橋村ストレートカイロプラクティック</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
  
    <body>
@@ -30,7 +30,7 @@
                 <img src="images/bottom-left2.png" alt="">
             </div>            
                 <a href="092-831-3408" class="btn btn--orange">
-                <img src="./images/kkrn_icon_denwa_8.svg" width="60" height="60">
+                <img src="images/kkrn_icon_denwa_8.svg" width="60" height="60">
                 お電話はこちら<br>092-831-3408
             </a>
         </div>
@@ -283,7 +283,7 @@
                         <p style="font-size: 2vw; text-align: center; font-weight: bold;">詳しくはお気軽にご連絡ください。</p>
 
                         <a href="092-831-3408" class="btn btn--orange2">
-                            <img src="./images/kkrn_icon_denwa_7.svg">
+                            <img src="images/kkrn_icon_denwa_7.svg">
                            092-831-3408
                         </a>
 
