--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Hashimura Chiro">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>橋村ストレートカイロプラクティック</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css"/>
   </head>
  
    <body>
