--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Hashimura Chiro">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>橋村ストレートカイロプラクティック</title>
-    <link rel="stylesheet"https://negi-neko.github.io/Chiro_test/style.css"/>
+    <link rel="stylesheet" https://negi-neko.github.io/Chiro_test/style.css">
   </head>
  
    <body>
