--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head>
  
    <body>
+    <!-- ▽▽トップへ戻るボタン▽▽ -->
+    <div id="page_top"></div>
+    <a href="#page_top" class="page_top_btn"><p>▲TOP▲</p><img src="images/Hashimura_manga.png" alt=""></a>
 
     <header id="header">
         <p>福岡県福岡市のドクター・オブ・カイロプラクティック</p>
