--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     を卒業し、カリフォルニア・ミシガン・ワシントン3州の免許を取得。<br>
                     パシフィックアジアカイロプラクティック協会（PAAC）認定。
                 </p>
-                <p style="font-size: 1.5vw; margin:0 0 5% 0;">http://paac-chiro.com/paacninteisyalist.html</p>
+                <p style="font-size: 1.5vw; margin:0 0 5% 0;"><a href="http://paac-chiro.com/paacninteisyalist.html">http://paac-chiro.com/paacninteisyalist.html</a></p>
             </div>
 
 
