--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <img src="images/award_california.JPG">
                         </figure>
                         <div>
-                            <h1 class="title">カリフォルニア州開業免許</h1>
+                            <h1 class="title">卒業証書</h1>
                         </div>
                     </li>
                     <li>
@@ -132,7 +132,7 @@
                             <img src="images/award_exam.JPG">
                         </figure>
                         <div>
-                            <h1 class="title">カリフォルニア州国家試験合格証</h1>
+                            <h1 class="title">カリフォルニア州開業免許</h1>
                         </div>
                     </li>
                 </ul>
